--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev src/index",
+    "dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules src/index",
     "test": "vitest",
-    "coverage": "vitest run --coverage"
+    "coverage": "vitest run --coverage",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +15,7 @@
   "dependencies": {
     "@prisma/client": "4.11.0",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
@@ -30,6 +32,8 @@
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.0.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.1.2",
     "prettier": "^2.8.4",
     "prisma": "^4.11.0",
     "ts-node-dev": "^2.0.0",
