--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules src/index",
+    "dev": "nodemon --exec ts-node ./src/index.ts",
     "test": "vitest",
     "coverage": "vitest run --coverage",
     "prepare": "husky install"
@@ -34,9 +34,10 @@
     "eslint-plugin-promise": "^6.0.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.1.2",
+    "nodemon": "^2.0.21",
     "prettier": "^2.8.4",
     "prisma": "^4.11.0",
-    "ts-node-dev": "^2.0.0",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.5",
     "vitest": "^0.29.2"
   }
